# sigmadeveloper

./: .gitattributes  .gitignore  README.md  build_ios_libs.sh  build_libs.sh  export_app.sh
.github/workflows/: build.yml
app/SigmaDevelop/: SigmaDevelopApp.swift
app/SigmaDevelop.xcodeproj/: project.pbxproj
app/SigmaDevelop.xcodeproj/xcshareddata/xcschemes/: SigmaDevelop.xcscheme
app/SigmaDevelop/Develop/: RenderEngine.swift
app/SigmaDevelop/Model/: DevelopSettings.swift  LibraryItem.swift  LibraryStore.swift
app/SigmaDevelop/Theme/: SigmaBranding.swift  SigmaTheme.swift
app/SigmaDevelop/Views/: DetailView.swift  DevelopControls.swift  DevelopOptionsSheet.swift  LibraryCard.swift  LibraryGridView.swift  ShareSheet.swift  ZoomableImage.swift
develop/: Package.swift  build_metallib.sh
develop/Metal/: Denoise.metal  FilmSim.metal  LensCorrection.ci.metal
develop/Sources/CFoveonRaw/: shim.c
develop/Sources/CFoveonRaw/include/: foveon_raw.h  (+1 more)
develop/Sources/SigmaFoveon/: Denoiser.swift  Developer.swift  FilmDefaults.swift  FilmSimulation.swift  FilmStocks.generated.swift  Interactive.swift  Kernels.swift  LensCorrection.swift  LensProfiles.generated.swift  NoiseProfiles.generated.swift  Raw.swift  Render.swift  WaveletDenoise.swift
develop/Sources/foveon/: main.swift
raw/: Cargo.toml
raw/src/: ffi.rs  lib.rs  main.rs
scripts/: export_denoiser_coreml.py  filmsim_bake.py  imgmetrics.swift  lcp_codegen.py  lr_prep.py  noise_profile.py  verifytiles.swift
scripts/spp/: spp_batch.sh  spp_probe.sh  spp_ui_export.applescript  stack.swift
(+6 files in other folders)
